--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,12 @@
     "require": {
         "php" : "^7.2|^8.0",
         "etermed/ewus": "0.*",
-        "illuminate/support": "^6.0|^7.0|^8.0"
+        "illuminate/contracts": "^6.0|^7.0|^8.0",
+        "illuminate/support": "^6.0|^7.0|^8.0",
+        "illuminate/console": "^6.0|^7.0|^8.0"
+    },
+    "require-dev": {
+        "phpstan/phpstan": "^0.12.43"
     },
     "autoload": {
         "psr-4": {
