--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,11 @@
         }
     ],
     "require": {
-        "php" : "^7.2|^8.0",
+        "php" : "^7.2",
         "illuminate/contracts": "^6.0|^7.0|^8.0",
         "illuminate/support": "^6.0|^7.0|^8.0",
         "illuminate/console": "^6.0|^7.0|^8.0",
-        "nextgen-tech/ewus": "^0.3|^1.0"
+        "nextgen-tech/ewus": "^1.1"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.12.43"
